# linkforge

./: .env.example  .gitignore  LICENSE-APACHE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: dependencies.py
app/api/v1/routers/: analytics.py  profiles.py  scraping.py
app/api/v1/schemas/: __init__.py  analytics.py  profile.py
app/application/dto/: __init__.py  analytics_dto.py  profile_dto.py
app/application/services/: __init__.py  linkedin_service.py  recommendation_service.py
app/application/use_cases/: __init__.py  get_insights.py  scrape_and_analyze.py
app/core/: config.py  exceptions.py  logging.py
app/domain/: __init__.py
app/domain/entities/: __init__.py  analysis.py  post.py  profile.py
app/domain/repositories/: __init__.py  post_repository.py  profile_repository.py
app/infrastructure/analysis/: __init__.py  performance_predictor.py  sentiment_analyzer.py  text_analyzer.py
app/infrastructure/database/: __init__.py  models.py  session.py
app/infrastructure/database/repositories/: __init__.py  post_repository_impl.py  profile_repository_impl.py
app/infrastructure/embeddings/: __init__.py  embedding_service.py
app/infrastructure/scraping/: __init__.py  base.py  linkedin_scraper.py
migrations/: env.py
migrations/versions/: 0214364bf8cc_init_schema.py
scripts/: seed.py
streamlit_app/: app.py
tests/: conftest.py  test_repositories.py
