[project]
name = "linkforge"
version = "0.1.0"
description = "Advanced LinkedIn analytics platform"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "ARG", "RUF012"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
